@@ -191,8 +191,8 @@ For more information about Novosibirsk Map, click L<here|https://en.wikipedia.or
 
 =begin html
 
-<a href="https://raw.githubusercontent.com/tupinek/Map-Tube-Novosibirsk/master/images/ex3.png">
-  <img src="https://raw.githubusercontent.com/tupinek/Map-Tube-Novosibirsk/master/images/ex3.png" alt="Новосибирский метрополитен" width="300px" height="300px" />
+<a href="https://raw.githubusercontent.com/michal-josef-spacek/Map-Tube-Novosibirsk/master/images/ex3.png">
+  <img src="https://raw.githubusercontent.com/michal-josef-spacek/Map-Tube-Novosibirsk/master/images/ex3.png" alt="Новосибирский метрополитен" width="300px" height="300px" />
 </a>
 
 =end html
@@ -289,7 +289,7 @@ Install the Map::Tube concrete metro modules.
 
 =head1 REPOSITORY
 
-L<https://github.com/tupinek/Map-Tube-Novosibirsk>
+L<https://github.com/michal-josef-spacek/Map-Tube-Novosibirsk>
 
 =head1 AUTHOR
 
