@@ -214,7 +214,7 @@ SEE ALSO
         Install the Map::Tube concrete metro modules.
 
 REPOSITORY
-    <https://github.com/tupinek/Map-Tube-Novosibirsk>
+    <https://github.com/michal-josef-spacek/Map-Tube-Novosibirsk>
 
 AUTHOR
     Michal Josef Špaček <mailto:skim@cpan.org>
